# steamnstats

./: .env.example  .gitignore  DESIGN.md  Makefile  PRODUCT.md  README.md  docker-compose.yml  package-lock.json
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py  worker.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  auth.py  me.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/services/: auth.py  library.py  steam.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py  test_library.py  test_security.py  test_steam.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js
frontend/src/: App.test.tsx  App.tsx  api.ts  format.ts  main.tsx  styles.css  types.ts
frontend/src/i18n/: en.json  index.ts  pt-BR.json
frontend/src/test/: setup.ts
mock-steam/: Dockerfile  app.py
