[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steamnstats-backend"
version = "0.1.0"
description = "FastAPI backend for SteamNStats"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2",
  "pyjwt>=2.9.0",
  "redis>=5.0.8",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "respx>=0.21.1",
  "ruff>=0.6.8",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
strict = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true
